[metadata]
name = bug_setuptools_scm

[options]
zip_safe = False
include_package_data = True
package_dir =
	=src
packages = find:
install_requires =
    pandas

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.md

[egg_info]
tag_build =
tag_date = 0

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

# Test dependencies
test =
    pytest
    pytest-cov

# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
